// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-14">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-24 rsg--inheritSize-25 rsg--baseColor-29">
  Hello
  <em class="rsg--text-24 rsg--inheritSize-25 rsg--baseColor-29 rsg--em-31">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-16">
    <h1 class="rsg--heading-17 rsg--heading1-18">
      Header
    </h1>
  </div>
  <p class="rsg--para-14">
    Text with
    <em class="rsg--text-24 rsg--inheritSize-25 rsg--baseColor-29 rsg--em-31">
      some
    </em>
    <strong class="rsg--text-24 rsg--inheritSize-25 rsg--baseColor-29 rsg--strong-32">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-15"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-14">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<div class="rsg--para-14">
  <ul class="rsg--list-34">
    <li>
      <input type="checkbox"
             class="rsg--input-2"
             readonly
      >
      list 1
    </li>
    <li>
      <input type="checkbox"
             class="rsg--input-2"
             readonly
      >
      list 2
    </li>
    <li>
      <input type="checkbox"
             class="rsg--input-2"
             checked
             readonly
      >
      list 3
    </li>
  </ul>
</div>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-6 rsg--para-1">
  <code class="lang-html rsg--code-5">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-16">
    <h1 class="rsg--heading-17 rsg--heading1-18">
      one
    </h1>
  </div>
  <div class="rsg--spacing-16">
    <h2 class="rsg--heading-17 rsg--heading2-19">
      two
    </h2>
  </div>
  <div class="rsg--spacing-16">
    <h3 class="rsg--heading-17 rsg--heading3-20">
      three
    </h3>
  </div>
  <div class="rsg--spacing-16">
    <h4 class="rsg--heading-17 rsg--heading4-21">
      four
    </h4>
  </div>
  <div class="rsg--spacing-16">
    <h5 class="rsg--heading-17 rsg--heading5-22">
      five
    </h5>
  </div>
  <div class="rsg--spacing-16">
    <h6 class="rsg--heading-17 rsg--heading6-23">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-14">
  Foo
  <code class="rsg--code-5">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-14">
  a
  <a href="http://test.com"
     class="rsg--link-15"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<div class="rsg--para-14">
  <ul class="rsg--list-34">
    <li>
      list 1
    </li>
    <li>
      list 2
      <div class="rsg--para-14">
        <ol class="rsg--list-34 rsg--ordered-35">
          <li>
            Sub-list
          </li>
          <li>
            Sub-list
          </li>
          <li>
            Sub-list
          </li>
        </ol>
      </div>
    </li>
    <li>
      list 3
    </li>
  </ul>
</div>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<div class="rsg--para-14">
  <ol class="rsg--list-34 rsg--ordered-35">
    <li>
      list
    </li>
    <li>
      item
    </li>
    <li>
      three
    </li>
  </ol>
</div>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<div class="rsg--para-14">
  <ul class="rsg--list-34">
    <li>
      list
    </li>
    <li>
      item
    </li>
    <li>
      three
    </li>
  </ul>
</div>

`;
